<resources>
    <string name="app_name">Server Socket</string>
    <string name="ip_address">IP Address:</string>
    <string name="enter_ip">enter IP address</string>
    <string name="server_msg">Server Message:</string>
    <string name="enter_msg">enter message</string>
    <string name="msg_from_cliente">Message from Client</string>
    <string name="start_server">Start Server</string>

    <string name="msg_from_server">Message from server</string>
    <string name="ip_from_server">192.168.1.6</string>
    <string name="sending_msg">Sending message</string>
    <string name="msg_failed">Message sending failed</string>
</resources>
