<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="8sp">

    <LinearLayout
        android:id="@+id/ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:weightSum="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_address"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/ip_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_ip"
            android:textAlignment="center"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/ip"
        android:weightSum="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_msg"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/msg_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_msg"
            android:textAlignment="center"
            android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/list"
        android:layout_below="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@+id/sendLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_from_cliente"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/server_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/green"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sendLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_start"
            style="?android:attr/buttonStyleInset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_server" />
    </LinearLayout>
</RelativeLayout>